Autosave ignores multires sculpting (patch attached) #32209

Closed
opened 2012-07-28 19:19:29 +02:00 by Nicholas Bishop · 16 comments

%%%Steps to reproduce from the default cube:

  1. Add multires and subdivide five times (exact number of subdivisions doesn't matter)
  2. Enable sculpt mode
  3. Sculpt a brush stroke on the mesh
  4. Wait for an autosave to occur
  5. Open the autosave file

Result: the autosaved file will show an unmodified mesh (missing the brush stroke.)

Regular file save calls ED_sculpt_force_update() to correct this, but autosave doesn't seem to have the right context. I've attached a patch that seems to work, looping over all meshes via G.main, but as I'm not familiar with this part of the code I'd like confirmation this is OK.%%%

%%%Steps to reproduce from the default cube: 1) Add multires and subdivide five times (exact number of subdivisions doesn't matter) 2) Enable sculpt mode 3) Sculpt a brush stroke on the mesh 4) Wait for an autosave to occur 5) Open the autosave file Result: the autosaved file will show an unmodified mesh (missing the brush stroke.) Regular file save calls ED_sculpt_force_update() to correct this, but autosave doesn't seem to have the right context. I've attached a patch that seems to work, looping over all meshes via G.main, but as I'm not familiar with this part of the code I'd like confirmation this is OK.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Nick, would check your patch.%%%

%%%Nick, would check your patch.%%%

%%%Fixed in svn rev49438. Thanks for the report and patch, closing now.%%%

%%%Fixed in svn rev49438. Thanks for the report and patch, closing now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Added subscriber: @Amadiro

Added subscriber: @Amadiro

This seems to be an issue again with 2.71 (772af36).

To reproduce:

  • open blender
  • in preferences, set autosave to 1 minute
  • save preferences, quit blender
  • open blender with default scene
  • go into sculpt mode
  • manipulate cube
  • leave blender running for 5 minutes, without exiting sculpt mode
  • kill blender forcefully

When recovering the autosave afterwards, the sculpted changes are not there. Just lost about an hour of sculpting work that way.

This seems to be an issue again with 2.71 (772af36). To reproduce: - open blender - in preferences, set autosave to 1 minute - save preferences, quit blender - open blender with default scene - go into sculpt mode - manipulate cube - leave blender running for 5 minutes, without exiting sculpt mode - kill blender forcefully When recovering the autosave afterwards, the sculpted changes are not there. Just lost about an hour of sculpting work that way.

Confirmed with a freshly built blender (ee8dafe). Upping priority to "high", which seems appropriate, since this can cause total loss of the users work.

Confirmed with a freshly built blender (ee8dafe). Upping priority to "high", which seems appropriate, since this can cause total loss of the users work.

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Please don't triage priority by self. For every reporter his own report is top-prio, no doubts. But this confuses our bug smashing process.

Me or @Psy-Fi will have a look asap.

Please don't triage priority by self. For every reporter his own report is top-prio, no doubts. But this confuses our bug smashing process. Me or @Psy-Fi will have a look asap.
Sergey Sharybin was unassigned by Antonis Ryakiotakis 2014-08-11 15:53:57 +02:00
Antonis Ryakiotakis self-assigned this 2014-08-11 15:53:57 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

OK, this is undo related. The issue is that we write the undo stack in the file which pretty much ignores the edit stacks completely (same would happen in edit mode). Issue also exists with quit.blend.

@ideasman42 can you take a look at the attached patch?

OK, this is undo related. The issue is that we write the undo stack in the file which pretty much ignores the edit stacks completely (same would happen in edit mode). Issue also exists with quit.blend. @ideasman42 can you take a look at the attached patch?

This issue was referenced by 585d2f31a9

This issue was referenced by 585d2f31a9c438bddb63842b2f160236323e355b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 585d2f31a9.

Closed by commit 585d2f31a9.

After discussion we agreed that we wouldn't want to slow down autosave - remember it gets called even during rendering, it should really be as fast as possible.

Anyway, I think solution here is to warn explicitly that edit mode and sculpt mode are not supported here.

After discussion we agreed that we wouldn't want to slow down autosave - remember it gets called even during rendering, it should really be as fast as possible. Anyway, I think solution here is to warn explicitly that edit mode and sculpt mode are not supported here.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32209
No description provided.