Fix T32209 quitting not saving latest data if you are in edit or sculpt mode on quit.blend.

This will use a slower file write if an object is in edit or sculpt
mode.

Autosaving will explicitly not be supported to keep it fast.
Added a tooltip warning.