source/blender/editors/include/ED_util.h
@@ -46,7 +46,7 @@ struct Mesh;
 void    ED_editors_init(struct bContext *C);
 void    ED_editors_exit(struct bContext *C);
 
-void    ED_editors_flush_edits(const struct bContext *C, bool for_render);
+bool    ED_editors_flush_edits(const struct bContext *C, bool for_render);
 
 /* ************** Undo ************************ */
 
